Adicion de datos en informe final.

--- a/references.bib
+++ b/references.bib
@@ -1,44 +1,29 @@
-@article{einstein,
-    author = "Albert Einstein",
-    title = "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
-    [{On} the electrodynamics of moving bodies]",
-    journal = "Annalen der Physik",
-    volume = "322",
-    number = "10",
-    pages = "891--921",
-    year = "1905",
-    DOI = "http://dx.doi.org/10.1002/andp.19053221004",
-    keywords = "physics"
+
+
+@online{74HC595,
+    author = "Luis del Valle Hernández",
+    title = "74HC595 registro de desplazamiento con Arduino",
+    url  = "https://programarfacil.com/blog/74hc595-registro-de-desplazamiento-arduino/",
+
 }
 
-@book{dirac,
-    title = {The Principles of Quantum Mechanics},
-    author = {Paul Adrien Maurice Dirac},
-    isbn = {9780198520115},
-    series = {International series of monographs on physics},
-    year = {1981},
-    publisher = {Clarendon Press},
-    keywords = {physics}
+@online{Datashet,
+    author = "Texas Instruments",
+    title = "SNx4HC595 8-Bit Shift Registers With 3-State Output Registers",
+    url  = "https://www.ti.com/lit/ds/symlink/sn74hc595.pdf",
+    addendum = "(accessed: 10.2021)",
 }
 
-@online{knuthwebsite,
-    author = "Donald Knuth",
-    title = "Knuth: Computers and Typesetting",
-    url  = "http://www-cs-faculty.stanford.edu/~uno/abcde.html",
-    addendum = "(accessed: 01.09.2016)",
-    keywords = "latex,knuth"
+@online{Compuertas_logicas,
+    author = "Juan Manuel Jimenez",
+    title = "Compuertas Lógicas",
+    url  = "https://ditlag.wordpress.com/2018/01/04/compuertas-logicas/",
+    addendum = "(accessed: 04.01.2018)",
 }
 
-@book{deitel2004como,
-  title={C{\'o}mo programar en C/C++ y Java},
-  author={Deitel, Harvey M and Deitel, Paul J},
-  year={2004},
-  publisher={Pearson educaci{\'o}n}
-}
-
-@book{deitel1999c++,
-  title={Como programar en C++},
-  author={Deitel, Harvey M and Deitel, Paul J},
-  year={1999},
-  publisher={Prentice Hall}
+@online{Func_integrado,
+    author = "Dan",
+    title = "How to use a 74hc595 shift register",
+    url  = "https://www.marginallyclever.com/2017/02/use-74hc595-shift-register/",
+    addendum = "(accessed: 14.02.2017)",
 }
